added mqtt protocol

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,11 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = espressif32
-board = esp32dev
+platform = espressif32@6.12.0
+board = esp32dev 
 framework = arduino
 monitor_speed = 115200
 
 lib_deps =
-  adafruit/Adafruit TMP117  
+  knolleary/PubSubClient
+  adafruit/Adafruit TMP117
